objects/MaintenancePlan.object
<CustomObject>
    <fields>
        <fullName>Complaint__c</fullName>
        <description>Field to capture complaint.</description>
        <label>Complaint</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maintenance Plans</relationshipLabel>
        <relationshipName>Maintenance_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                    <label>Pay As You Go</label>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Maintenance Plans</relationshipLabel>
        <relationshipName>Maintenance_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Type</label>
        <referenceTo>FSL_SubType__c</referenceTo>
        <relationshipLabel>Maintenance Plans</relationshipLabel>
        <relationshipName>Maintenance_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_MaintenancePlans</fullName>
        <columns>LastModifiedDate</columns>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Contact</columns>
        <columns>Service_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Maintenance Plans</label>
    </listViews>
    <listViews>
        <fullName>All_MaintenancePlans</fullName>
        <filterScope>Everything</filterScope>
        <label>All Maintenance Plans</label>
    </listViews>
    <listViews>
        <fullName>My_MaintenancePlans</fullName>
        <filterScope>Mine</filterScope>
        <label>My Maintenance Plans</label>
    </listViews>
    <listViews>
        <fullName>My_MaintenancePlans</fullName>
        <filterScope>Mine</filterScope>
        <label>My Maintenance Plans</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>